[gd_scene load_steps=41 format=3 uid="uid://coair8lxktg3n"]

[ext_resource type="Script" path="res://Entities/Enemy/Basic enemy test/monger.gd" id="1_xu8m0"]
[ext_resource type="PackedScene" uid="uid://bxo3gstx1krox" path="res://Components/health_component.tscn" id="2_1swf8"]
[ext_resource type="PackedScene" uid="uid://d2uys1rlpx60x" path="res://Components/hitbox_component.tscn" id="3_7gx45"]
[ext_resource type="PackedScene" uid="uid://4lg7g1d8f6ju" path="res://Components/shield_component.tscn" id="3_y5dm5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_spj0x"]
albedo_color = Color(1, 0.145098, 0.160784, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vulm8"]
material = SubResource("StandardMaterial3D_spj0x")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j7gh8"]
albedo_color = Color(0.0666667, 0.870588, 0.909804, 1)

[sub_resource type="BoxMesh" id="BoxMesh_y51vj"]
material = SubResource("StandardMaterial3D_j7gh8")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_3uhej"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xpotm"]
albedo_color = Color(0.964984, 0.182323, 0.0564977, 1)

[sub_resource type="BoxMesh" id="BoxMesh_26ure"]
material = SubResource("StandardMaterial3D_xpotm")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0mjao"]

[sub_resource type="Animation" id="Animation_8hp0e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/eyes:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/eyes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.437899, 0.39674)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("body/mainBody:mesh:material:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.145098, 0.160784, 1)]
}

[sub_resource type="Animation" id="Animation_qq7kx"]
resource_name = "attack"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/eyes:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.437899, 0.39674), Vector3(0, 0.438, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_hit_finished"
}]
}

[sub_resource type="Animation" id="Animation_wxlt1"]
resource_name = "chase"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/eyes:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_w03d4"]
resource_name = "falling"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/mainBody:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.145098, 0.160784, 1), Color(0.378297, 0.499225, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ocri8"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_dbkv7"]
resource_name = "wander"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/mainBody:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.145098, 0.160784, 1), Color(0.66972, 0.530606, 0.0551691, 1), Color(1, 0.145098, 0.160784, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r255o"]
_data = {
"RESET": SubResource("Animation_8hp0e"),
"attack": SubResource("Animation_qq7kx"),
"chase": SubResource("Animation_wxlt1"),
"falling": SubResource("Animation_w03d4"),
"idle": SubResource("Animation_ocri8"),
"wander": SubResource("Animation_dbkv7")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_81ham"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n0lqh"]
animation = &"chase"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1eunn"]
animation = &"falling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3fix0"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x1l3x"]
animation = &"wander"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rqyu0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8tiqg"]
xfade_time = 0.2
break_loop_at_end = true
advance_mode = 2
advance_expression = "_target_in_range()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rxbdj"]
xfade_time = 0.2
break_loop_at_end = true
switch_mode = 2
advance_mode = 2
advance_expression = "!_target_in_range()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cvjbv"]
break_loop_at_end = true
advance_mode = 2
advance_expression = "_target_in_range()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_81qyy"]
advance_mode = 2
advance_condition = &"fall_wand"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vh11f"]
break_loop_at_end = true
advance_mode = 2
advance_expression = "_target_in_sight()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d5mwj"]
advance_mode = 2
advance_expression = "player.global_position.y - global_position.y > 5"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x06ew"]
advance_mode = 2
advance_expression = "!is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pc6a7"]
break_loop_at_end = true
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bhwk5"]
advance_mode = 2
advance_expression = "!is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pmi0k"]
advance_mode = 2
advance_condition = &"falling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pf0fn"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wr45w"]
advance_mode = 2
advance_expression = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hmqvu"]
advance_mode = 2
advance_expression = "!idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jh0iq"]
states/End/position = Vector2(1081, 100)
states/Start/position = Vector2(313, 100)
states/attack/node = SubResource("AnimationNodeAnimation_81ham")
states/attack/position = Vector2(893, 153)
states/chase/node = SubResource("AnimationNodeAnimation_n0lqh")
states/chase/position = Vector2(496, -7.8656)
states/falling/node = SubResource("AnimationNodeAnimation_1eunn")
states/falling/position = Vector2(496, 153)
states/idle/node = SubResource("AnimationNodeAnimation_3fix0")
states/idle/position = Vector2(345, -7.8656)
states/wander/node = SubResource("AnimationNodeAnimation_x1l3x")
states/wander/position = Vector2(893, -7.8656)
transitions = ["Start", "falling", SubResource("AnimationNodeStateMachineTransition_rqyu0"), "chase", "attack", SubResource("AnimationNodeStateMachineTransition_8tiqg"), "attack", "chase", SubResource("AnimationNodeStateMachineTransition_rxbdj"), "wander", "attack", SubResource("AnimationNodeStateMachineTransition_cvjbv"), "falling", "wander", SubResource("AnimationNodeStateMachineTransition_81qyy"), "wander", "chase", SubResource("AnimationNodeStateMachineTransition_vh11f"), "chase", "wander", SubResource("AnimationNodeStateMachineTransition_d5mwj"), "wander", "falling", SubResource("AnimationNodeStateMachineTransition_x06ew"), "falling", "chase", SubResource("AnimationNodeStateMachineTransition_pc6a7"), "chase", "falling", SubResource("AnimationNodeStateMachineTransition_bhwk5"), "attack", "falling", SubResource("AnimationNodeStateMachineTransition_pmi0k"), "falling", "attack", SubResource("AnimationNodeStateMachineTransition_pf0fn"), "falling", "idle", SubResource("AnimationNodeStateMachineTransition_wr45w"), "idle", "falling", SubResource("AnimationNodeStateMachineTransition_hmqvu")]
graph_offset = Vector2(9, -50.8656)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cgksf"]

[node name="Basic_enemy" type="CharacterBody3D" groups=["Enemy", "enemy"]]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_xu8m0")

[node name="body" type="Node3D" parent="."]

[node name="mainBody" type="MeshInstance3D" parent="body"]
layers = 512
mesh = SubResource("CapsuleMesh_vulm8")
skeleton = NodePath("../../..")

[node name="eyes" type="MeshInstance3D" parent="body"]
transform = Transform3D(0.5, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.437899, 0.39674)
layers = 512
mesh = SubResource("BoxMesh_y51vj")
skeleton = NodePath("../../..")

[node name="Area3D" type="Area3D" parent="body/eyes"]
transform = Transform3D(-0.0095221, 0, -0.999955, 0, 1, 0, 0.999955, 0, -0.0095221, 0, 0, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="body/eyes/Area3D"]
transform = Transform3D(-0.00952209, 0, 0.999954, 0, 1, 0, -0.999954, 0, -0.00952209, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_3uhej")

[node name="MeshInstance3D" type="MeshInstance3D" parent="body"]
transform = Transform3D(0.7, 0, 0, 0, 1, 0, 0, 0, 0.3, 0, 0, -0.46614)
layers = 512
mesh = SubResource("BoxMesh_26ure")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0mjao")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.15
simplify_path = true
debug_enabled = true

[node name="Timers" type="Node" parent="."]

[node name="chaseTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="wanderTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="RayCasts" type="Node3D" parent="."]

[node name="sight" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, 0)

[node name="stair_check" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.724837, 0.415768)
target_position = Vector3(0, 0, 0.3)

[node name="stair_check2" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.903069, 0.416)
target_position = Vector3(0, 0, 0.3)

[node name="States and animation" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="States and animation"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_r255o")
}

[node name="AnimationTree" type="AnimationTree" parent="States and animation"]
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeStateMachine_jh0iq")
advance_expression_base_node = NodePath("../..")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/fall_wand = false
parameters/conditions/falling = false

[node name="HealthComponent" parent="." instance=ExtResource("2_1swf8")]
MAX_HEALTH = 5000.0

[node name="ShieldComponent" parent="." instance=ExtResource("3_y5dm5")]
MAX_SHIELD = 0.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "shield_component") instance=ExtResource("3_7gx45")]
health_component = NodePath("../HealthComponent")
shield_component = NodePath("../ShieldComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_cgksf")

[connection signal="area_shape_entered" from="body/eyes/Area3D" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="body_entered" from="body/eyes/Area3D" to="." method="_on_area_3d_body_entered"]
